일단 고치긴 한 듯?

--- a/_posts/2025-04-04-readme.txt.md
+++ b/_posts/2025-04-04-readme.txt.md
@@ -4,6 +4,34 @@ layout: default
 tags: etc
 ---
 
-# hi
+# Welcom to My Blog
 
-$ x = 1 $
+<hr/>
+<pre>
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠀⠈⢀⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠁⣠⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣿⢿⣿⡀⠀⣀⣠⠤⠤⠤⢤⣀⣠⣾⠿⣿⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⡿⠉⠑⣿⣷⠉⡀⠄⠠⢀⠂⡀⢀⠉⠉⣑⠛⠿⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⠞⠀⢐⣼⣿⡿⠃⠀⠄⡁⢠⡆⠐⣦⠈⠐⠈⠳⣄⣀⣉⡒⢤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⡰⠃⠀⠌⣼⡿⢹⠁⠠⠁⠂⡰⢫⠇⡞⠈⣇⠈⠐⠀⠘⡆⠉⢏⠉⠙⠲⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⢆⠀⢀⡠⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⡼⠁⠠⠁⣾⠃⠀⡿⠀⠂⢒⡿⣁⣸⡜⠀⢀⡸⡖⠋⢁⠂⢻⠀⠌⢇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡠⠤⠒⠒⠺⠈⠖⠽⣁⡀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⡜⠁⠠⠁⡼⢹⡀⢡⡇⠠⢁⡞⠀⢠⡟⠀⠀⣵⡀⢳⠈⢀⠐⣸⠇⠠⠘⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⡾⠅⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢢⣀
+⠀⠀⠀⠀⢀⡞⠀⠌⠐⣰⠁⢠⣿⡿⡇⢀⡿⡇⠀⣿⡇⠀⠀⣷⠃⠈⡇⢀⢂⣏⠠⠐⠠⠘⡆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠤⠚⢁⡤⠚⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⡿⠁
+⠀⠀⠀⢀⠎⠀⡐⠈⣀⡇⠀⠘⣯⣟⣧⣾⡘⡅⠀⠀⠀⠀⠀⠀⠀⢠⡇⠠⡜⠹⡄⠠⠁⠄⠘⡆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⠖⢁⣠⡴⠋⠀⠀⢠⠄⠀⠀⠀⡄⠀⠀⠀⠀⢸⠁⠀
+⠀⠀⢀⠞⠀⢂⠠⠁⡼⠀⠀⠀⠘⠿⠿⣿⣿⣧⡀⢠⠚⠉⢱⣀⠔⠉⣇⡞⠁⠀⢳⠀⠌⢀⠡⠸⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡼⠓⠈⢁⠎⠀⣀⠠⣀⠾⡀⠀⠀⠀⣧⠀⠀⠀⠀⢸⠀⠀
+⠀⠀⡜⠀⠌⠀⠄⢸⠁⠀⠀⠀⠀⡠⠔⠻⣷⣽⣛⣿⣶⠒⢻⠉⠐⣼⠏⠀⠀⠀⠸⡄⠂⠄⡐⠀⠹⡄⠀⠀⠀⠀⣀⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡌⠀⠀⠀⢀⠟⣦⡇⡇⠀⢠⠉⣆⢀⣠⠀⠈⡇⠀
+⠀⡜⠀⠌⢀⠡⢈⡏⠀⠀⠀⠀⡰⠀⠀⠀⢹⠈⣿⡛⠛⣷⣼⠀⠀⢃⠀⠀⠀⠀⠀⢳⠀⢂⠠⠈⠄⢳⠀⣠⣖⡿⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⠀⣞⠲⣌⣷⣿⢀⣼⡶⠻⡁⠀⠀⠀⣧⠀
+⠠⠀⠌⢀⠂⠠⣸⠀⠀⠀⠀⢀⠇⠀⠀⠀⢸⡿⠉⢷⡤⣏⠙⣇⠀⠈⡆⠀⠀⠀⠀⠘⡇⠀⡐⢀⠂⣼⢻⣡⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡄⠀⢸⢻⠀⢨⢹⡏⡇⢹⠒⡖⣷⠒⠀⣼⢻⠀
+⠃⠐⠈⡀⠄⢡⠇⠀⠀⠀⠀⣸⣤⢤⣄⣀⡟⠠⡑⢸⡇⢹⡄⢸⣶⣶⣿⡆⠀⠀⠀⠀⢳⠀⠐⡀⢰⣏⠦⣹⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢣⡀⡿⣼⡀⠈⠃⠀⠸⣾⠼⠀⡏⠀⣴⡿⠘⡆
+⠀⠌⠐⡀⠐⢸⠀⠀⠀⠀⢰⣿⣿⣿⣿⣿⣷⠁⠌⢸⡇⠈⣇⠀⢻⣿⣿⣿⡄⠀⠀⠀⠸⡄⢁⠀⠂⢿⣒⡹⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⢤⣵⣇⣻⣟⠢⣀⠀⠀⠁⠀⢀⣃⣼⡿⠿⠴⢇
+⠀⠌⡀⠄⠁⡏⠀⠀⠀⠀⣾⣿⣿⣿⣿⣿⡏⡐⠌⢰⡇⢀⢹⡆⠘⣿⣿⣿⣿⣄⠀⠀⠀⢧⠀⠌⢐⣠⣽⡶⣝⠲⡖⠶⢦⢤⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢨⠀⢯⠉⣿⠙⢶⣦⢍⣿⡏⢉⣽⠷⠚⢳⠀⠀⠈
+⠀⢂⠠⠀⢱⠇⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⡇⠐⢌⠨⣇⠠⠀⣷⠀⢿⣿⣿⣿⣿⣦⡀⠀⢸⣤⢾⡋⢗⡢⢕⣊⢗⡸⣩⢒⡣⢎⡳⢾⡍⣏⣻⣍⡛⠶⣄⠀⠀⠘⡄⢳⠂⣿⠀⢠⠔⢺⣷⠿⣿⡄⢀⢢⡾⠓⠀⢀
+⠀⢂⠠⠁⠸⠀⠀⠀⠀⣾⣿⣿⣿⣿⣿⣿⡇⡈⠆⠸⣿⠓⢀⢸⡆⠘⢿⣿⣿⣿⣿⣿⣷⣼⣇⣖⣩⠖⡱⢎⠲⣌⢳⡆⡏⡴⢣⠱⣋⣿⠞⡭⣩⣿⠿⢿⡀⠀⠀⣧⠀⠀⢿⣤⠃⠀⣸⢻⣀⣼⣿⣆⣿⠇⠀⠀⠀
+⠀⢂⠠⠈⡅⠀⠀⠀⢰⣿⣿⣿⣿⣿⣿⣿⣷⠀⢎⠘⣿⠛⠀⡈⣧⠈⡄⠙⣿⡿⣟⡯⣙⣔⡎⡼⢩⢻⣕⢎⢳⡘⢦⢻⡜⡲⣉⠳⣌⢾⡛⡝⣍⣲⣭⡿⠁⠀⠀⡯⢶⡒⣴⡇⠀⢠⢃⡞⠀⢻⠀⠛⢻⣦⠀⠀⠀
+⠀⢂⠀⠂⡅⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣇⠢⠄⣿⠀⡐⠀⢹⡔⡈⠆⢼⡳⣏⣲⡭⢟⣩⢛⣷⢯⣿⡘⢦⡙⣆⢛⡧⣣⠵⣛⡭⢾⡏⠽⣩⢍⣲⣽⠆⠀⠠⡇⠀⢽⠉⣇⢀⣞⡞⠀⠀⢸⡌⡐⢂⠹⡆⠀⠀
+⠀⢂⠈⠄⡁⠀⠀⠀⠀⢻⣿⣿⡿⠟⠋⠉⠙⣿⣆⢈⣿⡄⠠⠈⣼⣿⣦⣅⢺⣷⣭⢛⡹⢫⠝⣫⠜⣺⡇⡞⣡⠎⡴⢨⡗⣢⢋⡕⢮⣹⠟⡶⢳⡛⣽⡅⠀⠀⢸⣇⢀⣾⠀⠸⣿⣯⣀⠀⠀⠀⣷⢀⠣⠐⣧⠀⠀
+⠀⠂⠄⠂⠀⠀⠀⠀⠀⣼⣿⣿⢶⡤⠀⠀⡠⠈⢻⣾⣿⣿⣆⢡⣿⣿⣿⣿⣿⣿⣜⡛⡶⣧⣽⣤⣿⣿⠱⣊⢕⡪⣑⠧⣛⠤⣓⢬⣳⠛⠺⢥⣷⣾⣍⡀⠀⠀⣿⢿⣿⡿⣷⣶⣿⣬⠉⠀⠀⠀⢸⡄⢊⡁⣿⣷⣶
+⠀⠡⠐⠈⠀⠀⠀⠀⢀⣿⣿⣿⣿⠁⡀⠈⠀⠀⣼⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠋⢹⣿⣛⠭⢭⣙⣼⣿⢡⡓⡜⢢⠇⣞⡰⡙⢦⡷⠃⠀⠀⣠⣾⡟⠋⠀⠀⠀⠹⣾⣿⣿⡟⢻⡀⠀⠀⠀⠀⠀⢸⡇⢠⠐⢻⣿⣿
+⠀⠡⢀⠁⠀⠀⠀⠀⢾⣽⣿⢹⠇⣰⠁⡆⢠⢰⣿⣿⣿⣿⣿⣿⣿⣿⠿⠋⠘⣧⠜⠥⣾⣿⣿⣿⡿⠿⣦⡙⣬⠣⡽⠦⣵⣝⣯⠀⠀⠀⠀⠈⠙⢻⣦⠀⠀⠀⠀⠈⢡⡞⠀⠆⣱⣄⢀⣠⣴⠞⠉⡄⠢⢉⠄⠻⣿
+⢀⠡⣀⢈⠀⠀⢀⣀⠀⠘⣿⣿⣴⣏⣼⡁⣾⣸⢿⣿⡿⠿⠟⡛⢋⣧⣀⣴⠞⠁⣀⣀⣀⣈⣽⢶⡇⣀⣰⣿⣷⣽⣓⣒⣿⠻⡟⠳⠀⠀⠀⠀⠀⢚⡁⠀⠀⠀⠀⢠⣏⣠⠾⢚⠁⠈⠁⠀⠈⠓⢮⡠⠑⡈⠄⢃⠙
+```
+</pre>
