--- a/_posts/2025-04-05-new-post.md
+++ b/_posts/2025-04-05-new-post.md
@@ -1,38 +1,337 @@
 ---
 layout: default
-title: "정보보안 기사 실기 준비"
+title: "정보보안 기사 기출"
 tags: security
 ---
 
-# 시스템 보안 서술형
+[단답형]
 
-## Canary Word 기법에 대해서 서술하시오.
+1. 접근통제 정책에 대하여 다음 물음에 답하시오.
 
-- 메모리상에서 프로그램의 복귀주소(return address)와 변수 사이에 특정 값(Cannary Word)를 저장해 두는 기법, 스택 가드 기법이라고도 함.
+( A ) : 사용자나 사용자 그룹에 근거한 사용자 중심의 접근 제어 수행
 
-## Canary Word 기법의 공격 차단 원리를 서술하시오.
+( B ) : 모든 객체는 정보의 비밀수준에 근거하여 보안 레벨이 주어지고 허가된 사용자만 접근 가능토록 제어
 
-- 버퍼 오버플로우 발생 시 Canary Word가 변조되는 것을 탐지
+( C ) : 사용자와 객체 상호관계를 역할에 따라 접근 제어 수행
 
-## ASLR(Address Space Layout Randomization) 기법의 동작 방식을 서술하시오.
+(답) DAC, MAC, RBAC
 
-- 메모리 공격을 방어하기 위해 주소 공간 배치를 난수화 하는 기법
+​
 
-## ASLR(Address Space Layout Randomization) 기법의 공격 차단 원리를 서술하시오.
+2. MAC 주소(물리 주소)를 기반으로 IP 주소(논리 주소)를 할당받기 위해 사용되며, 디스크 없는 장치나 네트워크 부팅을 지원하는 장비에서 사용하는 TCP/IP 프로토콜은 무엇인가?
 
-- 실행 시마다 메모리 주소를 변경시켜 버퍼 오버플로우를 통한 특정 주소 호출을 차단함.
+(답) RARP(Reverse Address Resolution Protocol)
 
-## 운영체제별 패스워드 최소 길이 설정 방법에 대해 서술하시오.
+3. VLAN 구성 방식에 대하여 다음 ( )에 들어갈 명칭을 기술하시오.
 
-- SunOS(Solaris)
-  - #cat /etc/default/passwd
-  - PASSLENGTH =8
-- LINUX
-  - #cat /etc/login.defs
-  - PASS_MIN_LEN 8
-- AIX
-  - #cat /etc/default/security
-  - minlen=8
-- HP-UX
-  - #cat /etc/default/security
-  - MIN_PASSWORD_LENGTH=8
+( A ) 기반 VLAN : 스위치 포트를 각 VLAN에 할당. 같은 VLAN에 속한 호스트 간에만 통신 가능. 가장 일반적인 방식
+
+( B ) 기반 VLAN : 호스트의 MAC주소를 VLAN에 등록. 모든 MAC을 등록하고 관리하는 어려움.
+
+( C ) 기반 VLAN : 네트워크 주소별로 VLAN 구성.
+
+( D ) 기반 VLAN : 같은 통신 프로토콜을 가진 호스트 간에는 통신가능토록 VLAN 설정
+
+(답) 포트, MAC, 네트워크 주소, 프로토콜
+
+4. 전자금융거래법 제21조 2 제 4항에 기술된 다음 각호의 업무를 수행하는 사람을 무엇이라고 하나?
+
+1) 전자금융거래의 안정성 확보 및 이용자 보호를 위한 전략 및 계획의 수립
+
+2) 정보기술부문의 보호
+
+3) 정보기술부문의 보안에 필요한 인력관리 및 예산편성
+
+4) 전자금융거래의 사고 예방 및 조치
+
+(답) CISO(Chief Information Security Officer)
+
+5. 리눅스 시스템 로그 파일에 대하여 다음 빈칸에 적절한 파일을 기술하시오.
+
+( A ) : 현재 시스템에 로그인한 사용자의 상태가 출력되는 로그
+
+( B ) : 사용자의 로그인, 로그아웃, 시스템 재부팅 정보가 누적되어 출력되는 로그
+
+( C ) : 마지막으로 성공한 로그인 정보가 출력되는 로그
+
+(답) utmp, wtmp, lastlog
+
+​6. 다음 스캔 방법 중 포트가 닫혀있을 때만 응답이 오는 스캔 방식을 고르시오
+
+[보기] (SYN scan, FIN scan, XMAS scan, Null scan, Decoy scan)
+
+(답) FIN scan, XMAS scan, Null scan
+
+- 스텔스 스캔을 묻는 질문으로 수험서와 기출에서 모두 다루어진 문제입니다. 3점 모두 얻어야 합니다.
+
+\*\* 참고로 Decoy Scan은 공격자가 자신의 실제 IP를 숨기기 위해 여러 개의 가짜(Decoy) IP를 함께 사용하여 네트워크 스캔을 수행하는 기법입니다. 침입 탐지 시스템(IDS) 및 침입 방지 시스템(IPS)의 로그 분석을 우회하기 위해 사용됩니다.
+
+\*\*\* NMAP -D RND:10 {스캔대상 IP} 명령어를 통해 랜덤하게 10개의 Decoy IP를 생성하여 스캔할 수 있습니다.
+
+​
+
+7. SW 개발 보안과 관련하여 ( )에 들어갈 취약점명(공격기법)을 기술하시오.
+
+( A ) : DB와 연결되어 있는 애플리케이션의 입력값을 조작하여 의도하지 않은 결과를 반환하도록 하는 공격 기법
+
+( B ) : 게시판, 웹, 메일 등에 삽입된 악의적인 스크립트에 의해 쿠키 및 기타 개인정보를 특정 사이트로 전송시키는 공격 기법
+
+( C ) : 적절한 검증 절차를 수행하지 않은 사용자 입력값이 운영체제 명령어의 일부로 전달되어 의도하지 않은 시스템 명령어가 실행되도록 하는 공격 기법
+
+(답) SQL Injection, XSS, 운영체제 명령어 삽입
+
+- 기출(18회)에서 그대로 출제되었습니다. 3점 모두 얻어야 합니다.
+
+​
+
+8. 다음은 특정 명령어를 수행한 결과이다. ( )에 들어갈 명령어를 기술하시오.
+
+root@kali:~#Telnet webserver.com 80
+
+Trying 192.168.1.2…
+
+Connect to webserver.com.
+
+Escape character is '^]'.
+
+( ) \* HTTP/1.0
+
+​
+
+HTTP/1.1 200 OK
+
+Date: Sat, 6 Aug 2022 09:01:01 KST
+
+Server: Microsoft-IIS/5.0
+
+Allow: GET,HEAD,POST,OPTIONS,TRACE
+
+Content-Length:0
+
+Connection: close
+
+Content-Type: text/plain; charset-euc-kr
+
+Connection closed by foreign host.
+
+(답) OPTIONS
+
+- 웹서버가 지원하는 HTTP Method 를 확인하는 명령어로, 기출문제(20회)와 동일하게 출제되었습니다. 3점 모두 얻어야 합니다.
+
+​
+
+9. 소프트웨어 패치의 종류와 관련하여 ( )에 들어갈 용어를 기술하시오
+
+( A ) : 즉시 교정되어야만 하는 주요한 취약점을 패치하기 위해 배포되는 프로그램으로 서비스팩이 발표된 이후 패치가 추가될 필요가 있을 때 별도로 발표됨.
+
+( B ) : 문제를 예방 또는 해결하거나 컴퓨터 작동 방식을 향상시키거나,컴퓨터 경험을 향상시킬 수 있도록 추가되는 소프트웨어
+
+(답) 핫픽스(Hot Fix), 업데이트(Update)
+
+- 주요정보통신기반시설 취약점 분석 가이드에서 출제된 신규 문제입니다. 실제 IT 및 보안 업무에 종사하지 않는 분들은 맞추기 어려웠으리라 생각합니다.
+
+​
+
+10. 매니저와 에이전트 구조로 되어 있고, 네트워크 장비의 상태를 모니터링하고 관리하기 위해 사용되는 TCP/IP 기반 네트워크 프로토콜을 무엇이라고 하나?
+
+(답) SNMP(Simple Network Management Protocol)
+
+- 수험서와 기출에서 모두 다루어진 기본 토픽입니다. 3점 모두 얻어야 합니다.
+
+\*\* SNMP는 시험에 자주 출제되는 토픽이므로, 포트 번호(161, 162) 와 버전별 취약점(암호화가 지원되는 V3 권장)에 대해서는 상세한 학습이 필요합니다.
+
+\*\*참고 : SNMP
+
+​
+
+11. 어떠한 대책을 도입하더라도 위험을 완전히 제거할 수 없으므로 일정 수준 이하의 위험은 받아들이고 사업을 진행하는 위험대응 방식을 무엇이라고 하나?
+
+(답) 위험수용
+
+- 수험서와 기출에서 모두 다루어진 문제입니다. 3점 모두 얻어야 합니다.
+
+\*\* 나머지 3가지 대응 방식(위험전가, 위험회피, 위험완화)도 자주 출제되므로 명확히 학습하시기 바랍니다.
+
+​
+
+12.네트워크 논리 그룹을 구분하여 보안을 강화하고, 브로드캐스트도메인의 범위를 줄여 네트워크 성능 향상을 지원하는 LAN 기술을 무엇이라고 하나?
+
+(답) VLAN(Virtual LAN)
+
+- 수험서와 기출에서 모두 다루어진 문제입니다. 3점 모두 얻어야 합니다.
+
+​
+
+[서술형]
+
+13. 위험분석 접근법 중 복합접근법의 개념, 장점, 단점을 설명하시오
+
+(답)
+
+1. 개념 : 고위험(high risk) 영역을 식별하여 상세 위험분석을 수행하고 다른 영역은 베이스라인 접근법을 사용하는 방식
+
+2. 장점 : 분석의 정확성과 속도의 균형을 유지함으로써 효율적인 보안 정책 적용이 가능함. 보안 수준이 높은 환경에서는 상세위험분석 비중을 높이고, 신속한 대응이 필요한 경우 베이스라인 접근법 중심으로 운용하는 등 기업 상황에 맞게 유연한 적용이 가능
+
+3. 단점 : 두 가지 접근법을 조합하여 사용해야 하므로 명확한 기준이 필요하며 관리 정책이 복잡해질 수 있음. 자산 중요도를 잘못 판단하면 과도한 분석 비용이 들거나, 중요한 시스템의 보안이 부족할 수 있음
+
+- 수험서에 있는 내용이고 기출문제에서도 자주 다루어지는 토픽입니다. 위험관리의 중요성이 계속 증가하고 있으므로, 철저한 학습이 필요합니다.
+
+\*\* 참고로, 19회 실무형 문제 16번 모범답안을 다시 한번 읽어보시기 바랍니다.
+
+​
+
+14. 정보보호조치에관한 지침은 정보통신망법 제45조 2항에 따라 정보통신서비스 제공자가 정보통신서비스를 제공하는데 사용되는 정보통신망의 안정성 및 정보의 신뢰성을 확보하기 위한 보호조치의 구체적인 내용에 대하여 정하는 것을 목적으로 한다. 해당 지침에서 규정하고 있는 보호조치의 구체적 내용 중 다음 항목에서 규정하고 있는 내용을 기술하시오.
+
+1) 1.2.1.정보보호 방침의 수립 및 이행
+
+2) 1.2.2.정보보호 실행 계획의 수립 및 이행
+
+(답)
+
+1.2.1.정보보호 방침의 수립·이행
+
+- 정보보호 목표, 범위, 책임 등을 포함한 정보보호 방침(policy) 수립
+
+- 정보통신서비스와 관련된 모든 법, 규제, 계약, 정책, 기술상의 요구사항을 문서화하고 시행
+
+​
+
+1.2.2. 정보보호 실행계획의수립·이행
+
+- 정보보호 방침을 토대로 예산, 일정 등을 포함한 당해 연도의 정보보호 실행계획을 수립
+
+- 최고경영층이 실행계획을 승인하고 정보보호 최고책임자가 추진 상황을 매 반기마다 점검
+
+* 신규로 출제된 문제로 해당 지침의 세부 내용을 모두 숙지하고 답안을 작성하기 어려우셨으리라 생각됩니다. 부분 점수 4~5점 정도로 방어할 수 있다면 최선이었을 것 같습니다.
+
+​
+
+15. 유닉스 시스템에 저장된 파일에 다음과 같은 권한이 설정되었다. 권한의 상세한 의미를 설명하시오.
+
+[설정된 권한] -rwxr-x--x
+
+(답) 해당 파일의 소유자는 읽고, 쓰고, 실행이 모두 가능함. 해당 파일의 그룹에 속한 사용자들은 읽고, 실행은 가능하나 파일 쓰기(Write)는 불가함. 기타 다른 사용자들은 실행만 가능하며 파일을 읽고, 쓰기(Write)는 불가함.
+
+- 유닉스에서 아주 기본이 되는 파일의 권한을 물어보는 문제가 출제되었습니다. 점수를 주기 위하 문제로 12점 모두 획득이 필요합니다.
+
+​
+
+16. 재해복구시스템 유형에는 미러사이트, 핫사이트, 웜사이트, 콜드사이트가 있다. 다음 물음에 답하시오.
+
+1) 미러 사이트의 정의
+
+2) 미러사이트의 장단점 각 2개씩 설명
+
+3) RTO가 가장 오래 걸리는 방식은 무엇이며, 이유는 무엇인가?
+
+(답)
+
+1. 주센터와 동일한 수준의 시스템을 백업센터에 구축하고, 액티브-액티브 상태로 실시간 동시 서비스를 제공하는 방식
+
+2-장점) 신속한 업무재개 가능(RTO:즉시), 데이터의 최신성 보장(RPO:0)
+
+2-단점) 초기 투자 및 유지 보수 비용이 높음, 데이터 업데이트가 많은 경우 과부하 초래
+
+3. COLD 사이트. 데이터만 원격지에 보관하고 서비스를 위한 정보자원은 최소한으로 확보되어 있어, 재해 시 필요한 자원을 조달하여 복구하는데 오랜 시간이 소요됨.
+
+- 재해 복구시스템의 유형은 보안기사 실기 시험에 자주 출제되는 토픽입니다. 21회 기출문제에서 그대로 출제되었으므로, 12점 모두 얻어야 합니다.
+
+​
+
+​[실무형]
+
+17. 다음 자바 프로그램은 SQL Injection 에 취약한 소스와 취약점을 해소한 소스코드 이다. ( )에 들어갈 코드를 작성하시오.
+
+[취약한 소스코드]
+
+1: //외부로부터 입력받은 값을 검증 없이 사용할 경우 안전하지 않다.
+
+2: String gubun = request.getParameter("gubun");
+
+3: ......
+
+4: String sql = "SELECT \* FROM board WHERE b_gubun = '" + gubun + "'";
+
+5: Connection con = db.getConnection();
+
+6: Statement stmt = con.createStatement();
+
+7: //외부로부터 입력받은 값이 검증 또는 처리 없이 쿼리로 수행되어 안전하지 않다.
+
+8: ResultSet rs = stmt.executeQuery(sql);
+
+​
+
+[취약점을 해소한 소스코드]
+
+1: String gubun = request.getParameter("gubun");
+
+2: ......
+
+3: //1. 사용자에 의해 외부로부터 입력받은 값은 안전하지 않을 수 있으므로, PreparedStatement
+
+사용을 위해 ?문자로 바인딩 변수를 사용한다.
+
+4: String sql = "SELECT \* FROM board WHERE b_gubun = ( A ) ";
+
+5: Connection con = db.getConnection();
+
+6: //2. PreparedStatement 사용한다.
+
+7: PreparedStatement pstmt = con.( B )(sql);
+
+8: //3.PreparedStatement 객체를 상수 스트링으로 생성하고, 파라미터 부분을 setString등의 메소드로
+
+설정하여 안전하다.
+
+9: pstmt.( C )(1, gubun);
+
+10: ResultSet rs = pstmt.( D );
+
+(답)
+
+A) ?
+
+B) prepareStatement
+
+C) setString
+
+D) executeQuery()
+
+- SQL Injection 취약점을 예방하기 위한 PreparedStatement 방식의 SQL 쿼리문을 작성하는 문제입니다. 기출문제에서 다루어진 적이 있나 정확히 소스코드 구문을 기억하고 쓰기는 쉽지 않았을 것 같습니다. 하지만 16점 배점 중 10점 이상은 획득해야 합니다.
+
+​
+
+18. NTP서비스 취약점을 이용한 한 DDoS 공격 대응방안 4가지를 서술하시오.
+
+(답)
+
+1. 서버측면 대응 방안 2가지
+
+1-1) NTP 서버 버전 업그레이드 : monlist 기능이 제거된 버전(4.2.8 이상) 으로 업그레이드 하기
+
+1-2) NTP 서버 버전 업그레이드 불가시 monlist 기능 비활성화 : /etc/ntp.conf 파일에 "disable monitor" 설정
+
+​
+
+2. 네트워크 측면 대응 방안 2가지
+
+2-1) 보안장비(예:방화벽)에서 인가되지 않은 외부 트래픽 유입 차단 : NTP 서비스 포트(udp 123) 접근 제한
+
+2-2) 보안장비(예:방화벽)에서 비정상 NTP 패킷 차단 : 100 바이트 이상 NTP 응답 패킷 차단(정상 패킷은 40바이트 이하). 동일 IP에서 자주 쿼리 요청시 차단.
+
+​
+
+- 기타 참고 사항으로 monlist 쿼리 요청을 통해 취약점이 존재하는지 확인하는 명령어는 다음과 같습니다.
+
+ntpdc -c monlist <점검대상 ntp서버 ip>
+
+- monlist 는 구버전(2.4.8 미만) NTP 서버에서 제공하는 명령어로, 최근 접속한 최대 600개의 접속 호스트 목록을 출력해 줍니다.
+
+​
+
+- DRDoS 공격시 악용되는 대표적인 취약점으로 수험서와 기출문제에서 다루어진 문제입니다. 하지만 정확하게 4가지 대응방안을 기술하기는 어려우셨으리라 생각됩니다.
+
+​
+
+\*\* 참고로, 가장 효과적인 조치 방법은 취약하지 않은 버전으로 패치하는 것입니다. 하지만 패치를 즉시 적용하기 어려운 경우(테스트, 호환성 이슈)에는 임시 조치 방법으로 기능 비활성화, 보안장비에 차단 정책 설정을 통해 리스크를 완화하는 조치를 적용하는 것이 안전합니다
